<resources>
    <string name="app_name">Newsletter</string>
    <string name="action_settings">Settings</string>

    <string name="oops">Oops</string>
    <string name="phone_number">Номер телефона</string>
    <string name="send_code">Послать код</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_in">Войти в систему</string>
    <string name="basketball">Баскетбол</string>
    <string name="nearest_event">ближайшее событие</string>
    <string name="type_message">Type message</string>
    <string name="technical_support">Техническая поддержка</string>

    <string name="lorem" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </string>
    <string name="hone_number_or_email">Номер телефона или эл. почта</string>
    <string name="sign_in_to_system">Вход в систему</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="code">Код</string>
    <string name="next">Далее</string>
    <string name="email">Электронная почта</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="second_name">Отчество</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="gender">Пол</string>
    <string name="password">Пароль</string>
    <string name="submit_password">Подтвердите пароль</string>
    <string name="i_agree_with_therms_and_policy">Я прочел(а) и согласен(а) Условия и Положения и Условия Конфидециальности</string>
    <string name="select_birth_date">Select birth date</string>
    <string name="choose_your_gender">Choose your gender</string>

</resources>