<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:scrollbarSize="0dp"
    android:overScrollMode="never"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        style="@style/PageContentStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/app_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:transitionName="app_icon_transition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="?actionBarSize"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_l"
            android:textStyle="bold"
            android:transitionName="sign_in_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_icon" />

        <EditText
            android:id="@+id/etName"
            style="@style/SignInEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <EditText
            android:id="@+id/etSurname"
            style="@style/SignInEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/surname"
            android:importantForAutofill="no"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@id/etName" />

        <EditText
            android:id="@+id/etSecondName"
            style="@style/SignInEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/second_name"
            android:importantForAutofill="no"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@id/etSurname" />

        <EditText
            android:id="@+id/etDOB"
            style="@style/SignInEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/date_of_birth"
            android:importantForAutofill="no"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@id/etSecondName" />

        <EditText
            android:id="@+id/etGender"
            style="@style/SignInEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/gender"
            android:importantForAutofill="no"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@id/etDOB" />

        <TextView
            android:id="@+id/tvNext"
            style="@style/GreenButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="30dp"
            android:transitionName="signInTransition"
            app:layout_constraintTop_toBottomOf="@id/etGender" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
