<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/PageContentStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_10"
    tools:context=".ui.mainActivity.MainActivity">

    <TextView
        android:id="@+id/btn_sign_in"
        style="@style/GreenButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_up"/>

    <TextView
        android:id="@+id/btn_sign_up"
        style="@style/SignInBorderedButtonStyle"
        app:layout_constraintBottom_toTopOf="@id/edit"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:text="@string/sign_up"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit"
        style="@style/SignInEditStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btn"
        style="@style/GreenButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/send_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit" />

</androidx.constraintlayout.widget.ConstraintLayout>