<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_layout"
    style="@style/PageContentStyle"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/app_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:transitionName="app_icon_transition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_l"
        android:textStyle="bold"
        android:transitionName="sign_in_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_icon" />

    <EditText
        android:id="@+id/etPhone"
        style="@style/SignInEditStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/etPin"
        style="@style/SignInEditStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/code"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/etPhone" />

    <TextView
        android:id="@+id/tvSendCode"
        style="@style/GreenButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/send_code"
        android:transitionName="signInTransition"
        app:layout_constraintTop_toBottomOf="@id/etPin" />

</androidx.constraintlayout.widget.ConstraintLayout>